--- a/src/Checkout.css
+++ b/src/Checkout.css
@@ -1,5 +1,19 @@
+.checkout {
+    display: flex;
+    padding: 20px;
+    background-color: white;
+    height: max-content;
+
+}
+
 .checkout_ad {
     width: 100%;
-    height: 150px;
     margin-bottom: 10px;
 }
+
+.checkout_title {
+    margin-right: 10px;
+    padding: 10px;
+    border-bottom: 1px solid lightskyblue;
+}
+
