feat : 리액트 useState 로 전역 로그인 처리 + 로그인, 회원가입 firebase 활용 연결

--- a/src/Header.css
+++ b/src/Header.css
@@ -81,3 +81,12 @@
     margin-left: 10px;
 }
 
+.loginPage {
+    text-decoration: none;
+    color: black;
+}
+
+.checkoutPage {
+    text-decoration: none;
+    color: black;
+}
